tests/errors/e_func_in_pxd.pyx
cimport e_func_in_pxd_support

_ERRORS = u"""
1:5: function definition not allowed here
"""
